# SoftServeTasks

./: CMakeLists.txt  CMakePresets.json  forward_string_list.h  main.cpp  string_list.h
Task1/: CMakeLists.txt
Task1/include/: string_list.hpp
Task1/src/: string_list.cpp
Task1/test/: string_list_test.cpp
Task2/: CMakeLists.txt
Task2/include/: any_type.hpp  fundamental_variant_type.hpp  variant_type.hpp
Task2/include/any_type/: any_type_to_error.hpp
Task2/include/variant_type/: max_size.hpp  variant_helper.hpp  variant_type_to_error.hpp
Task2/src/: CMakeLists.txt
Task2/src/any_type/: CMakeLists.txt  any_type.cpp
Task2/test/: CMakeLists.txt  any_type_test.cpp  variant_type_test.cpp
Task3/: .gitignore  CMakeLists.txt  default.txt
Task3/include/application/: async_concurrent_reader.hpp  concurrent_reader.hpp  console_ui.hpp  controlled_concurrent_reader.hpp  pool_concurrent_reader.hpp
Task3/include/reader/: async_concurrent_reader.hpp  async_parallel_reader.hpp  counter.hpp  line_count.hpp  line_type.hpp  parallel_reader.hpp  pool_concurrent_reader.hpp  pool_parallel_reader.hpp  stopwatch.hpp
Task3/include/thread/: thread_pool.hpp  threadsafe_node.hpp  threadsafe_queue.hpp
Task3/include/thread/thread_pool/: thief_queue.hpp
Task3/src/: CMakeLists.txt  main.cpp
Task3/src/application/: CMakeLists.txt  async_concurrent_reader.cpp  concurrent_reader.cpp  console_ui.cpp  controlled_concurrent_reader.cpp  file_reader.cpp  main.cpp  pool_concurrent_reader.cpp
Task3/src/reader/: CMakeLists.txt  async_concurrent_reader.cpp  async_parallel_reader.cpp  counter.cpp  file_reader.cpp  parallel_reader.cpp  pool_concurrent_reader.cpp  pool_parallel_reader.cpp  stopwatch.cpp
Task3/src/thread/: thief_queue.cpp
Task3/src/thread/thread_pool/: CMakeLists.txt  thief_queue.cpp  thread_pool.cpp
Task3/test/: CMakeLists.txt  reader_test.cpp  test.cpp  thread_test.cpp
include/: any_get_error.hpp  any_type.hpp  holder.hpp  placeholder.hpp  string_list.hpp  variant_type.hpp
include/any_type/: any_to_error.hpp  banned_type.hpp  holder.hpp
include/variant_type/: variant_helper.hpp  variant_to_error.hpp
src/: CMakeLists.txt  any_type.cpp  string_list.cpp
src/any_type/: any_type.cpp
src/application/: main.cpp
src/variant_type/: variant_type.cpp
test/: CMakeLists.txt  any_type_test.cpp  string_list_implementation_test.cpp  string_list_test.cpp  test.cpp  variant_type_test.cpp
